<resources>
    <string name="app_name">PersistentData9590</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_main">List Of User</string>
    <string name="full_name">Input full name</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>